--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg fixed-top bg-transfaren">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/loading.gif" alt="" class="logo" width="40px" style="border: 2px solid black;">
+                    <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697014114/rclflm9dbzfphmxft6ty.png" alt="" class="logo" >
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -608,7 +608,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-md-6">
                         <div class="site_info logo_area wow fadeInLeft" data-wow-delay="0.3s">
-                            <img src="assets/img/loading.gif" alt="" class="footer_logo" width="40px" style="border: 2px solid black;">
+                            <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697014114/akxaxa1bsfvc3il8xqyr.png" alt="" class="footer_logo" >
                      
                             <p>Together, we embark on a journey to create a brand that reflects your core values and aspirations. Our collaborative effort ensures that your brand identity aligns perfectly with your vision.</p>
                             <div class="social_icons">
